refactored application properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+#Base URL for Spoonacular
+spoonacular.urls.base=https://api.spoonacular.com
+
+#Base URl for meal planner
+spoonacular.urls.mealplan=/mealplanner/generate
+
 
