--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spoonacular.urls.base=https://api.spoonacular.com
 #Base URl for meal planner
 spoonacular.urls.mealplan=/mealplanner/generate
 
-
+#API Key
+spoonacular.api.key=52b2023f776e49889eebc7271c73ce40
